# Buddys

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  pyproject.toml  render.yaml
deploy/tencent/: buddys.service  install_lighthouse.sh  nginx-buddys.conf  resolve_public_ipv4.sh  run_with_env_compat.sh
src/buddys_api/: agent_models.py  agent_routes.py  agent_store.py  auth_models.py  auth_routes.py  auth_store.py  buddy_store.py  console_template.html  cost_meter.py  db.py  device_models.py  device_routes.py  device_store.py  engagement_metrics_models.py  engagement_metrics_routes.py  engagement_metrics_store.py  founder_metrics_policy.py  main.py  policy.py  provider_models.py  provider_routes.py  provider_store.py  runtime.py  schemas.py  state_memory_models.py  state_memory_routes.py  state_memory_service.py  state_memory_store.py  sync_models.py  sync_routes.py  sync_store.py  token_plan.py  trace_store.py
tests/contract/: test_device_models.py  test_schemas.py  test_state_memory_models.py
tests/evals/: test_state_memory_real_model_eval.py
tests/golden/: test_golden_trace.py  test_state_memory_golden_trace.py
tests/integration/: test_agent_api.py  test_api_flow.py  test_auth_api.py  test_console_experience_flow.py  test_console_multimodal_flow.py  test_console_ui.py  test_deployment_packaging.py  test_device_api.py  test_device_simulator_flow.py  test_engagement_metrics_api.py  test_multi_end_sync_flow.py  test_persistent_buddies.py  test_provider_and_usage_api.py  test_runtime_flow.py  test_state_memory_api.py  test_state_memory_sync_and_ui.py  (+1 more)
(+25 files in other folders)
